# TG-Agendamento-para-Salao-de-Beleza

./: README.md  app.py  main.py  pyproject.toml  views.py
backend/: __init__.py  forms.py  models.py  user_proxy.py  views.py
instance/: users.db
migrations/versions/: 18c6744520ff_adiciona_coluna_foto_em_profissional_e_.py  3264048bc8c0_adicionando_campo_senha_hash_ao_.py  73730faaa6bf_adicionando_telefone_para_o_profissional.py  d0f028634731_tornando_senha_hash_obrigatório.py  fb388a6af780_criação_inicial_do_banco.py
static/css/: perfil-servico.css  style-adm-inicio.css  style-apresentacao.css  style-btnInicio.css  style-cadastrar-cliente.css  style-cadastrar-profissional.css  style-cadastrar-servico.css  style-cliente-perfil.css  style-clientes.css  style-historico.css  style-horario.css  style-inicio-profissional.css  style-inicio.css  style-perfil-cliente.css  style-profissionais.css  style-profissional-agenda.css  style-profissional-agendar.css  style-profissional.css  style-servico-profissional.css  style-servicos.css  style.css  style_inicio.css
templates/: adm-inicio.html  adm-servicos.html  adm_Inicio.html  apresentacao.html  cadastrar-cliente.html  cadastrar-profissional.html  cadastrar-servico.html  cliente-perfil.html  clientes.html  escolherProfissional.html  historico.html  hitorico.html  horario.html  inicio.html  login.html  perfil-cliente.html  perfil-servico.html  profissionais.html  profissional-agenda.html  profissional-agendar.html  profissional-inicio.html  register.html  servico-profissional.html  servicos.html
