[project]
name = "tg-salaodebeleza"
version = "0.1.0"
description = ""
authors = [
    {name = "RenatoAkira",email = "renatoakira@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-bcrypt",
    "flask-login",
    "flask-migrate",
    "flask-wtf",
    "email-validator (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
